Bug 71749 - LO cannot open a word document with a table inside a footnote (and crashes)
Summary: LO cannot open a word document with a table inside a footnote (and crashes)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.4.2 release
Hardware: All All
: highest critical
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: target:4.3.0 target:4.2.0.0.beta2 tar...
Keywords: bibisected, regression
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-11-18 16:37 UTC by Maxou
Modified: 2015-12-17 07:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
The word document as example (20.50 KB, application/msword)
2013-11-18 16:37 UTC, Maxou
Details
Example (20.00 KB, application/msword)
2013-11-19 09:15 UTC, Urmas
Details
Example #2 - Word doc with table in footnote crashes LO (22.00 KB, application/msword)
2013-11-19 11:06 UTC, Maxou
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxou 2013-11-18 16:37:49 UTC
Created attachment 89416 [details]
The word document as example

A word document (created with Word – Version 2000 9.0.9626 SP3)  
does not open with the following version of LibreOffice
Version: 4.1.3.2 
Build ID: 70feb7d99726f064edab4605a8ab840c50ec57a

In the following case
when the table [production detail is inserted in a footnote].
The document opens normaly if this table is inserted in the body instead of footnote.

And it opens – in both cases – with LibreOffice 3.5.7.3
Comment 1 Joel Madero 2013-11-18 17:29:23 UTC
Please provide us with a document that makes LibreOffice crash as the one you attached is just showing a good document opening correctly.

Marking as NEEDINFO - once document is attached please mark as UNCONFIRMED and we'll try to pinpoint the issue.


Thanks!
Comment 2 Urmas 2013-11-19 09:15:04 UTC
Created attachment 89454 [details]
Example
Comment 3 Urmas 2013-11-19 09:15:43 UTC
Libreoffice loops while opening such files.
Comment 4 Maxou 2013-11-19 11:06:10 UTC
Created attachment 89456 [details]
Example #2 - Word doc with table in footnote crashes LO
Comment 5 Joel Madero 2013-11-19 14:14:40 UTC
Prioritizing:
Critical - crash/infinite loop
Highest - default for critical bugs, seems appropriate here as we have a regression as well

ConfirmedRegression bibisected

regression

mab4.2

+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ 73eaae9d1e97ec4b1f434cf01b5c1f97a5d8389e is the first bad commit
commit 73eaae9d1e97ec4b1f434cf01b5c1f97a5d8389e
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Wed Oct 16 11:07:50 2013 +0000

    source-hash-5da10275a7475efdbfd9de14ea58cf8f4c6c1582
    
    commit 5da10275a7475efdbfd9de14ea58cf8f4c6c1582
    Author:     Stephan Bergmann <sbergman@redhat.com>
    AuthorDate: Fri Mar 1 17:09:45 2013 +0100
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Fri Mar 1 17:18:29 2013 +0100
    
        Related rhbz#915743: Abort UCB call from SvtMatchContext_Impl::Stop
    
        ...as otherwise the SvtMatchContext_Impl thread can continue to run for
        arbitrarily long, and the other thread calling Stop() and join() will block.
    
        However, especially the WebDAV UCP does not properly support aborting commands,
        see 260afe56fd6b2f34de8290f3cdb7d1df5b88f8a8 " neon commands cannot be aborted",
        so this is not yet enough to actually fix rhbz#915743 "thread deadlock/slow
        join in insert->hyperlink in impress."
    
        Change-Id: I0da899f824763e1b3d19bb5b38d906feb690b623

:100644 100644 fd22aadcebcf1ca20b6c2fcdb9e135deeb9b5885 8a0f14e1bb71d7ecdf8086c62e9769bb7f2d09b8 M	autogen.log
:100644 100644 5af869ab53b50329a270e7d4e2587f802bf68afb 8519bf956c5e06a85818d380070eedc0ef846790 M	ccache.log
:100644 100644 63cd7351c9d6feb098661a5783d51bb172d8a306 33abac29aad7182260562465482b493d94b78a83 M	commitmsg
:100644 100644 e9ea867065a69fa4f0fbbb5c2abb40baeeabd307 21fc5294b2cb922862b78327b6b8a3cd953f38b5 M	dev-install.log
:100644 100644 4c087a5ff52a8cef08f31417ac650666b1d9d0af c1cc87465560a589137349c81641a62968242386 M	make.log
:040000 040000 ece742cbaf9101d015210ea8da6c00ad7a4457c7 9ff9cbceea1fe6b0ad1b17fe9068b2c8e32a6cbb M	opt

# bad: [25428b1e953636f74986622c5df614f04c150ed1] source-hash-cb4e009c4539c535108021934e545194b35cad9d
# good: [f0f6c65eb764f0303f59c58d320e9b0d5a894377] source-hash-4b9740b4ec3987e1d4d2ad6d20b4dcf996a4fa2e
git bisect start 'latest' 'oldest'
# bad: [a72833796a7e527d9efc9ca6d8fe9b579e469105] source-hash-1472b5f87314fe660ef1a7b254e51272669f12f6
git bisect bad a72833796a7e527d9efc9ca6d8fe9b579e469105
# bad: [4300c48268179afe8db66410fad04436183407cd] source-hash-753310b7db6a36aeaae36cef3bfca970e9310569
git bisect bad 4300c48268179afe8db66410fad04436183407cd
# good: [280c5141ea58e6b50f7d46546a9c52891225eeff] source-hash-ba446dd58a4ad324d242afcd5b28d3b4dff5a881
git bisect good 280c5141ea58e6b50f7d46546a9c52891225eeff
# bad: [8734d0269629a270d9e97cb5176bcc6b76338a54] source-hash-07352f07ce40ef40e9b73fd05aa4f9c5eac38290
git bisect bad 8734d0269629a270d9e97cb5176bcc6b76338a54
# bad: [b42797d9346abe9681bf36768258d309b83d17da] source-hash-ee53857e984fea54b7dc08b99079b38766f0b796
git bisect bad b42797d9346abe9681bf36768258d309b83d17da
# bad: [4384f6d33ec00ba3566675d505ee585a2af5be6d] source-hash-310fb291ccfb817a3503785af143828682c0c1f1
git bisect bad 4384f6d33ec00ba3566675d505ee585a2af5be6d
# bad: [817b9556dbb6406a10ff28416e98ff343df491e7] source-hash-b15f095293c6127ecaef2f0fa3a1683e72392835
git bisect bad 817b9556dbb6406a10ff28416e98ff343df491e7
# bad: [73eaae9d1e97ec4b1f434cf01b5c1f97a5d8389e] source-hash-5da10275a7475efdbfd9de14ea58cf8f4c6c1582
git bisect bad 73eaae9d1e97ec4b1f434cf01b5c1f97a5d8389e
Comment 6 Terrence Enger 2013-11-21 22:34:52 UTC
There may be a clue in the fact that (1) LibreOffice disables menu option Insert > Table in a footnote, and (2) pasting a table into a footnote causes a crash.  Bug 71892 reports this last problem.
Comment 7 Michael Stahl (allotropia) 2013-12-02 20:22:37 UTC
dont get a crash here but infinite loop somewhere in ww8 filter...

regression from:

commit 8bccae5d816abace259c9a1d0249e7195a2490d0
Author:     Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
AuthorDate: Wed Feb 13 02:49:57 2013 +0100
Commit:     Miklos Vajna <vmiklos@suse.cz>
CommitDate: Fri May 24 15:55:47 2013 +0200

    fdo#43105: apply old sw-nested-positionned-tables-ww8-import-fix.diff
Comment 8 Michael Stahl (allotropia) 2013-12-02 20:23:15 UTC
used to work in 4.0.3.2, broken in 4.0.4.2
Comment 9 Björn Michaelsen 2013-12-02 22:05:46 UTC
Ahhh, great. sw-nested-positionned-tables-ww8-import-fix.diff was an old go-oo flr "fix" with all the joys of a quick and dirty insanely unhealthy looking hack including a "goto" statement. But without that, we would regress fdo#43105 (which also won a mab status)
Comment 10 Commit Notification 2013-12-02 22:41:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=790896d9a557d34ea91d6e5926471de66503be7a

fdo#71749: sw: WW8: don't loop on tables in footnotes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl (allotropia) 2013-12-02 22:44:51 UTC
looks like the filter did some special casing to not modify the bStartTab/bStopTab vars inside footnotes but the crude patch checked for
the modifications triggered from that in its loop condition....

fixed on master
Comment 12 Michael Stahl (allotropia) 2013-12-02 22:46:04 UTC
(In reply to comment #9)

the author was immediately obvious from the ugly coding style
Comment 13 Commit Notification 2013-12-02 22:52:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=276eea27c124560422339da47755014a4801a27e&h=libreoffice-4-2

fdo#71749: sw: WW8: don't loop on tables in footnotes


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-12-03 09:07:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6dfc6b717b5e625cbc48c856b73573719c511c8a&h=libreoffice-4-1

fdo#71749: sw: WW8: don't loop on tables in footnotes


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2013-12-04 10:28:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20cd30da8ecf0a41c9bbd7d7311f8f54d6ac0fa8&h=libreoffice-4-1-4

fdo#71749: sw: WW8: don't loop on tables in footnotes


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-17 07:33:13 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]