fdo#71749: sw: WW8: don't loop on tables in footnotes

(regression from ee1db992b98378b5e2f5e9aa8af0e36c375e582f)

Change-Id: Id10b6fb8e9e3697b10a1df605cb48d94a55ad207
(cherry picked from commit 790896d9a557d34ea91d6e5926471de66503be7a)